# rules_typescript

./: WORKSPACE  defs.bzl
examples/ts_protoc_gen/: BUILD.bazel  car.proto
internal/: ts_repositories.bzl
internal/ts_protoc_gen/: BUILD.bazel  package.json  ts_protoc_gen_library.bzl
